[gd_scene load_steps=11 format=2]

[ext_resource path="res://actors/red_slime/RedSlime.gd" type="Script" id=1]
[ext_resource path="res://assets/red_slime/RedSlime.png" type="Texture" id=2]
[ext_resource path="res://assets/sounds/push.wav" type="AudioStream" id=3]

[sub_resource type="CapsuleShape2D" id=1]

custom_solver_bias = 0.0
radius = 4.16938
height = 5.33621

[sub_resource type="Animation" id=2]

resource_name = "fall"
length = 0.1
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ 24 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, -4 ) ]
}

[sub_resource type="Animation" id=3]

length = 0.8
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.2, 0.4, 0.6 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 0, 1, 2, 3 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, -4 ) ]
}

[sub_resource type="Animation" id=4]

resource_name = "jump"
length = 0.3
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 1,
"values": [ 16, 17, 18 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.1, 0.2 ),
"transitions": PoolRealArray( 1, 1, 1 ),
"update": 0,
"values": [ Vector2( -1, -4 ), Vector2( -1, -1 ), Vector2( -1, 1 ) ]
}

[sub_resource type="Animation" id=5]

length = 0.6
loop = true
step = 0.15
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.15, 0.3, 0.45 ),
"transitions": PoolRealArray( 1, 1, 1, 1 ),
"update": 1,
"values": [ 8, 9, 10, 11 ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("Sprite:offset")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 0,
"values": [ Vector2( -1, -4 ) ]
}

[sub_resource type="CapsuleShape2D" id=6]

custom_solver_bias = 0.0
radius = 26.6731
height = 85.7361

[sub_resource type="CapsuleShape2D" id=7]

custom_solver_bias = 0.0
radius = 6.78325
height = 3.62119

[node name="RedSlime" type="KinematicBody2D" groups=[
"enemies",
]]

input_pickable = false
collision_layer = 1
collision_mask = 1
collision/safe_margin = 0.08
script = ExtResource( 1 )
__meta__ = {
"_edit_group_": true
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="." index="0"]

shape = SubResource( 1 )
_sections_unfolded = [ "Transform" ]

[node name="Sprite" type="Sprite" parent="." index="1"]

texture = ExtResource( 2 )
offset = Vector2( -1, 1 )
vframes = 6
hframes = 8
frame = 18
_sections_unfolded = [ "Animation", "Offset" ]

[node name="AnimationPlayer" type="AnimationPlayer" parent="." index="2"]

root_node = NodePath("..")
autoplay = ""
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/fall = SubResource( 2 )
anims/idle = SubResource( 3 )
anims/jump = SubResource( 4 )
anims/move = SubResource( 5 )
blend_times = [  ]

[node name="ChaseArea" type="Area2D" parent="." index="3"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"

[node name="CollisionShape2D" type="CollisionShape2D" parent="ChaseArea" index="0"]

rotation = 1.5708
shape = SubResource( 6 )
_sections_unfolded = [ "Transform" ]

[node name="Hitbox" type="Area2D" parent="." index="4"]

position = Vector2( 0.5, 0 )
input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Transform" ]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox" index="0"]

rotation = 1.5708
shape = SubResource( 7 )
_sections_unfolded = [ "Transform" ]

[node name="PushSound" type="AudioStreamPlayer" parent="." index="5"]

stream = ExtResource( 3 )
volume_db = -5.0
autoplay = false
mix_target = 0
bus = "Master"

[connection signal="body_entered" from="ChaseArea" to="." method="_on_ChaseArea_body_entered"]

[connection signal="body_exited" from="ChaseArea" to="." method="_on_ChaseArea_body_exited"]

[connection signal="body_entered" from="Hitbox" to="." method="_on_Hitbox_body_entered"]


